--- a/template.toml
+++ b/template.toml
@@ -22,6 +22,34 @@ k4 = 0
 k5 = 0
 k6 = 0
 
+[Camera0_RGB_Factory]
+fx = 0
+fy = 0
+cx = 0
+cy = 0
+p1 = 0
+p2 = 0
+k1 = 0
+k2 = 0
+k3 = 0
+k4 = 0
+k5 = 0
+k6 = 0
+
+[Camera0_Extrinsic_Factory]
+tx = 0
+ty = 0
+tz = 0
+r11 = 0
+r12 = 0
+r13 = 0
+r21 = 0
+r22 = 0
+r23 = 0
+r31 = 0
+r32 = 0
+r33 = 0
+
 [Camera0]
 camera_name = "camera0"
 serial_no = ""
