--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+#Poetry
+.venv/
+.python-version
+.poetry.lock
+
+#Cython
 build/
 opencv_mat.cpp
 zense_pywrapper.cpp
 zense_pywrapper.cpython-*
 opencv_mat.cpython-*
+zense_pywrapper.so
+opencv_mat.so
+
 camera_parameter.toml
 
