--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [tool.poetry]
-name = "pico_zense_cython_wrapper"
+name = "pico_zense_cython_wrapper_cpu_check"
 version = "0.1.0"
 description = ""
 authors = ["yuki-inaho <yoshikawa@inaho.co>"]
 
 [tool.poetry.dependencies]
 python = "^2.7"
-toml = "^0.10.1"
-opencv-python = "4.2.0.32"
-cython = "^0.29.19"
-click = "^7.1.2"
-pkgconfig = "^1.5.1"
-numpy = "^1.16.6"
+click = "7.1.2"
 cvui = "2.7b1"
-psutil = "^5.7.0"
-enum="0.4.7"
-ipython="5.10.0"
+cython = "0.29.19"
+numpy = "1.16.6"
+opencv-python = "4.2.0.32"
+pkgconfig = "1.5.1"
+toml = "0.10.1"
+pathlib = "1.0.1"
+pyflann = "1.6.14"
+matplotlib = "2.2.5"
 
 [tool.poetry.dev-dependencies]
 
