--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ toml = "0.10.1"
 pathlib = "1.0.1"
 pyflann = "1.6.14"
 matplotlib = "2.2.5"
+psutil = "^5.7.0"
+enum = "^0.4.7"
+enum34 = "^1.1.10"
 
 [tool.poetry.dev-dependencies]
 
