--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.16.0
-cython==0.29.20
+click==7.1.2
+cvui==2.7b1
+cython==0.29.19
+numpy==1.16.6
 opencv-python==4.2.0.32
 pkgconfig==1.5.1
 toml==0.10.1
-cvui==2.7.b1
-click==7.1.2
