Update .gitignore and add projection_module.py

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ data/
 zense_pywrapper.egg-info
 dist/
 build/
+
+example/utils/__init__.pyc
+example/utils/projection_module.pyc
+example/utils/projection_utils.pyc
+example/utils/zense_camera_param.pyc
